--- a/source/presentations/packer.html
+++ b/source/presentations/packer.html
@@ -80,17 +80,18 @@
   </div>
 
 
-  <div id="overview_code" class="step" data-x="0" data-y="1770" data-scale="4.5">
+  <div id="overview_code" class="step" data-x="0" data-y="1770" data-scale="5">
   </div>
 
 
-  <div class="step" data-x="0" data-y="1770">
-    <pre><code data-language="javascript">  "builders": [
+  <div class="step" data-x="0" data-y="0">
+    <pre><code data-language="javascript">{
+  "builders": [
     {
       "type": "virtualbox",
       "name": "virtualbox-ubuntu",
       "boot_command": [
-        "&lt;esc&gt;&lt;esc&gt;&lt;enter&gt;&lt;wait&gt;enter><\wait>",
+        "&lt;esc&gt;&lt;esc&gt;&lt;enter&gt;&lt;wait&gt;&lt;enter&gt;&lt;wait&gt;",
         "preseed/url=",
         "http://{{ .HTTPIP }}:{{ .HTTPPort }}",
         "/preseed.cfg",
@@ -100,7 +101,7 @@
       "http_directory": "http/ubuntu/",            </pre></code>
   </div>
 
-  <div class="step" data-x="0" data-y="2340">
+  <div class="step" data-x="0" data-y="600">
     <pre><code data-language="javascript">      "guest_os_type": "Ubuntu_64",
       "iso_url": "http://releases.ubuntu.com/...",
       "iso_checksum": "7d335ca541fc49..",
@@ -109,7 +110,7 @@
       "ssh_password": "{{user `ssh_password`}}",   </pre></code>
   </div>
 
-  <div class="step" data-x="0" data-y="2790">
+  <div class="step" data-x="0" data-y="1050">
     <pre><code data-language="javascript">      "vboxmanage": [
         [
           "modifyvm",
@@ -121,7 +122,7 @@
     },                                             </pre></code>
   </div>
   
-  <div class="step" data-x="0" data-y="3330">
+  <div class="step" data-x="0" data-y="1590">
     <pre><code data-language="javascript">    {
       "type": "vmware",
       ...
@@ -133,10 +134,8 @@
   ],                                               </pre></code>
   </div>
 
-
-  <div class="step" data-x="0" data-y="0">
-    <pre><code data-language="javascript">{
-  "variables": {
+<div class="step" data-x="0" data-y="2130">
+    <pre><code data-language="javascript">  "variables": {
     "timezone": "UTC",
     "ruby_version": "1.9.3-p448",
     "puppet_version": "",
@@ -145,11 +144,10 @@
     "ssh_password": "vagrant"
     ...
   },                                               </pre></code>
-  </div>
-    
+  </div>    
 
 <!-- Data y = (prev_number_line+next_number_line)*line-height/2 -->
-  <div class="step" data-x="0" data-y="480">
+  <div class="step" data-x="0" data-y="2580">
     <pre><code data-language="javascript">  "provisioners": [
     {
       "type": "file",
@@ -158,7 +156,7 @@
     },                                             </pre></code>
   </div>
 
-  <div class="step" data-x="0" data-y="1020">
+  <div class="step" data-x="0" data-y="3150">
     <pre><code data-language="javascript">    {
       "type": "shell",
       "environment_vars": [
@@ -173,12 +171,12 @@
   ],                                               </pre></code>
   </div>
 
-  <div class="step" data-x="0" data-y="3660">
+  <div class="step" data-x="0" data-y="3570">
     <pre><code data-language="javascript">  "post-processors": ["vagrant"]
 }                                                  </pre></code>
   </div>
 
-  <div id="overview_code" class="step" data-x="0" data-y="1770" data-scale="4.5">
+  <div id="overview_code" class="step" data-x="0" data-y="1770" data-scale="5">
   </div>
 
   <div class="step slide" data-x="0" data-y="5000">
@@ -220,6 +218,18 @@
         </ul>
     </div>
     <script>drawTable("inner_slide13");</script>
+  </div>
+
+  <div class="step slide" data-x="4500" data-y="5000">
+    <div id="inner_slide14">
+      <h1>Thoughts</h1><br>
+        <ul>
+          <li>Read the doc, it's great!</li>
+          <li>Go is really fast</li>
+          <li>Post issues!</li>
+        </ul>
+    </div>
+    <script>drawTable("inner_slide14");</script>
   </div>
 
   <div class="step question" data-x="-9000" data-y="2000" data-scale="20" >
