Update last slide

--- a/source/presentations/remotestorage/index.html
+++ b/source/presentations/remotestorage/index.html
@@ -121,8 +121,17 @@
 				</section>
 				
 				<section>
-					<h2>Hackathon: remoteStorage</h2>
-					<p>13th September</p>
+					<h1>How?</h1>
+					<pre><code data-trim style="font-size=40px">
+{
+  hackaton:
+  {
+    date: "13th of September",
+    place: "StartupLisboa",
+    theme: "remoteStorage"
+  }
+}
+					</code></pre>
 					<a href="https://github.com/remotestorage/starter-kit#remotestorage-starter-kit"><img src="http://www.ysu.edu/images/img/remoteStorage-big.png"></a>
 					<aside class="notes">
 						remoteStorage.js lets the user choose his backend
